<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent">

        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".FragmentProfile">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:gravity="center"
                    android:text="PROFILE"
                    android:textColor="@color/black"
                    android:textSize="40dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="spread_inside"
                    />

                <TextView
                    android:id="@+id/name"
                    style="@style/style_element_second_act"
                    android:text="@string/name"
                    app:layout_constraintBottom_toTopOf="@id/phone_number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title" />

                <TextView
                    android:id="@+id/phone_number"
                    style="@style/style_element_second_act"
                    android:text="@string/number"
                    app:layout_constraintBottom_toTopOf="@id/address"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/name" />

                <TextView
                    android:id="@+id/address"
                    style="@style/style_element_second_act"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    app:layout_constraintBottom_toTopOf="@id/email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/phone_number" />

                <TextView
                    android:id="@+id/email"
                    style="@style/style_element_second_act"
                    android:text="@string/email"
                    app:layout_constraintBottom_toTopOf="@id/gender"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/address"/>

                <TextView
                    android:id="@+id/gender"
                    style="@style/style_element_second_act"
                    android:text="@string/gender"
                    app:layout_constraintBottom_toTopOf="@id/country"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/email"/>

                <TextView
                    android:id="@+id/country"
                    style="@style/style_element_second_act"
                    android:text="@string/country"
                    app:layout_constraintBottom_toTopOf="@id/hobby"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/gender"/>

                <TextView
                    android:id="@+id/hobby"
                    style="@style/style_element_second_act"
                    android:paddingLeft="20dp"
                    android:text="@string/hobby"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/country"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>
    </ScrollView>
</layout>